[gd_scene load_steps=18 format=3 uid="uid://cqsuqg31nvw21"]

[ext_resource type="Script" path="res://Code/Player.gd" id="1_x1wt7"]
[ext_resource type="Texture2D" uid="uid://c45r0ymk0dvfv" path="res://Assets/Fruit/Strawberry.png" id="3_orfwl"]
[ext_resource type="PackedScene" uid="uid://b5xtf53x2acsy" path="res://Scenes/Primary/MobileControl.tscn" id="5_8a2gi"]
[ext_resource type="Texture2D" uid="uid://bgxilmq0g55af" path="res://Assets/Sprites/Tama.png" id="5_rne1y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3bmxf"]
atlas = ExtResource("5_rne1y")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltw7m"]
atlas = ExtResource("5_rne1y")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqjs8"]
atlas = ExtResource("5_rne1y")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cvk2"]
atlas = ExtResource("5_rne1y")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg17x"]
atlas = ExtResource("5_rne1y")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxxkd"]
atlas = ExtResource("5_rne1y")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxawd"]
atlas = ExtResource("5_rne1y")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7axu7"]
atlas = ExtResource("5_rne1y")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpd2k"]
atlas = ExtResource("5_rne1y")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p145q"]
atlas = ExtResource("5_rne1y")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijdh2"]
atlas = ExtResource("5_rne1y")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m1ap"]
atlas = ExtResource("5_rne1y")
region = Rect2(144, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_f05lv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bmxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltw7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqjs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cvk2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg17x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxxkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxawd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7axu7")
}],
"loop": true,
"name": &"walkleft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpd2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p145q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijdh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m1ap")
}],
"loop": true,
"name": &"walkright",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
light_mask = 3
visibility_layer = 3
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_x1wt7")

[node name="Camera2D2" type="Camera2D" parent="."]
zoom = Vector2(4.5, 4.5)
limit_left = 0
limit_top = 0
limit_bottom = 699
limit_smoothed = true

[node name="HitBox" type="CollisionPolygon2D" parent="."]
visible = false
light_mask = 3
y_sort_enabled = true
polygon = PackedVector2Array(2, 16, 6, 16, 6, 14, 8, 14, 8, 12, 8, 2, 6, 2, 6, -4, 4, -4, 2, -6, -4, -6, -6, -6, -6, 0, -6, 2, -10, 2, -10, 10, -8, 10, -8, 12, -4, 12, -4, 14, 2, 14)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = -4.0
offset_top = -54.0
offset_right = 7.0
offset_bottom = -35.0
scale = Vector2(1.3, 1.3)

[node name="StrawberryCounter" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "0"

[node name="Strawberry" type="Sprite2D" parent="HBoxContainer"]
position = Vector2(0, 20)
scale = Vector2(0.705104, 0.625)
texture = ExtResource("3_orfwl")
hframes = 23

[node name="CollectionBubble" type="Area2D" parent="."]
visible = false
y_sort_enabled = true
collision_mask = 3

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="CollectionBubble"]
polygon = PackedVector2Array(2, 16, 6, 16, 6, 14, 8, 14, 8, 12, 8, 4, 6, 2, 6, -4, 4, -6, -4, -6, -6, -4, -6, 0, -6, 2, -8, 2, -8, 10, -4, 10, -4, 14, 0, 14)

[node name="Timer" type="Timer" parent="CollectionBubble"]
one_shot = true

[node name="MobileControl" parent="." instance=ExtResource("5_8a2gi")]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_f05lv")
animation = &"walkright"

[connection signal="area_entered" from="CollectionBubble" to="." method="CollectionBubble"]
[connection signal="timeout" from="CollectionBubble/Timer" to="." method="RespawnTimer"]
